--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'DA'
 - !lcsh 'Stonehenge (England)'
+- GITenberg
 title: Stonehenge, Today and Yesterday
 url: http://www.gutenberg.org/ebooks/19130
